tests/react_functional/react_functional.exp
Error: test.js:4
  4: <F />; // error: missing `foo`
      ^ Cannot create `F` element because property `foo` is missing in props [1] but exists in object type [2].
  References:
    4: <F />; // error: missing `foo`
       ^^^^^ [1]: props
    3: function F(props: { foo: string }) {}
                         ^^^^^^^^^^^^^^^ [2]: object type

Error: test.js:5
  5: <F foo={0} />; // error: number ~> string
             ^ Cannot create `F` element because in property `foo`, number [1] is incompatible with string [2].
  References:
    5: <F foo={0} />; // error: number ~> string
               ^ [1]: number
    3: function F(props: { foo: string }) {}
                                ^^^^^^ [2]: string

Error: test.js:9
  9: function G(props: { foo: string|numner }) {}
                                     ^^^^^^ numner. Could not resolve name

Error: test.js:13
 13: <Z />; // error, expected React component
     ^^^^^ `Z` element. Expected React component instead of
 13: <Z />; // error, expected React component
      ^ number


Found 4 errors
